--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <!-- 3. Display the application -->
 
-<body style="margin:0; padding:0;">
+<body id="body" style="margin:0; padding:0;">
   <div id="loader">
     <div style="padding-top:20px;padding-left:8px">
       <img id="logo" src="app/resources/images/telefonica.png" />
