Lazy Load implemented!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+  <base href="/">
+
   <title>Colaboradores</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,9 +29,9 @@
     #logo {
       position: relative;
       -webkit-animation-name: example;
-      -webkit-animation-duration: 10s;
+      -webkit-animation-duration: 2s;
       animation-name: example;
-      animation-duration: 10s;
+      animation-duration: 2s;
     }
     
     @-webkit-keyframes example {
