Condition for toggle presentation

--- a/app/app.config.html
+++ b/app/app.config.html
@@ -22,7 +22,8 @@
             <p-column field="sdccargo" header="Cargo"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabCargo="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCargo(tblColabCargo)" [(ngModel)]="tblColabCargo.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCargo(tblColabCargo)" [(ngModel)]="tblColabCargo.ativo"
+                        *ngIf="tblColabCargo.idcargo!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
@@ -35,7 +36,8 @@
             <p-column field="sdccidade" header="Cidade"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabCidade="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCidade(tblColabCidade)" [(ngModel)]="tblColabCidade.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCidade(tblColabCidade)" [(ngModel)]="tblColabCidade.ativo"
+                        *ngIf="tblColabCidade.idcidade!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
@@ -49,7 +51,8 @@
             <p-column field="sdcentregrupo" header="Entre Grupo"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabEntreGrupo="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEntreGrupo(tblColabEntreGrupo)" [(ngModel)]="tblColabEntreGrupo.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEntreGrupo(tblColabEntreGrupo)" [(ngModel)]="tblColabEntreGrupo.ativo"
+                        *ngIf="tblColabEntreGrupo.identregrupo!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
@@ -62,7 +65,8 @@
             <p-column field="sdcestado" header="Estado"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabEstado="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEstado(tblColabEstado)" [(ngModel)]="tblColabEstado.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEstado(tblColabEstado)" [(ngModel)]="tblColabEstado.ativo"
+                        *ngIf="tblColabEstado.idestado!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
@@ -75,7 +79,8 @@
             <p-column field="sdcgrupo" header="Grupo"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabGrupo="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectGrupo(tblColabGrupo)" [(ngModel)]="tblColabGrupo.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectGrupo(tblColabGrupo)" [(ngModel)]="tblColabGrupo.ativo"
+                        *ngIf="tblColabGrupo.idgrupo!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
@@ -88,7 +93,8 @@
             <p-column field="sdcsituacao" header="Situação"></p-column>
             <p-column field="nflativo" header="Status" styleClass="col-button">
                 <template let-tblColabSituacao="rowData" pTemplate type="body">
-                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectSituacao(tblColabSituacao)" [(ngModel)]="tblColabSituacao.ativo"></p-inputSwitch>
+                    <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectSituacao(tblColabSituacao)" [(ngModel)]="tblColabSituacao.ativo"
+                        *ngIf="tblColabSituacao.idsituacao!=0"></p-inputSwitch>
                 </template>
             </p-column>
         </p-dataTable>
