--- a/app/app.config.html
+++ b/app/app.config.html
@@ -24,6 +24,10 @@
                 <template let-tblColabCargo="rowData" pTemplate type="body">
                     <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCargo(tblColabCargo)" [(ngModel)]="tblColabCargo.ativo"
                         *ngIf="tblColabCargo.idcargo!=0"></p-inputSwitch>
+
+                    <div *ngIf="tblColabCargo.idcargo==0">
+                        <div>{{tblColabCargo.ativo?"ativo":"inativo"}}</div>
+                    </div>
                 </template>
             </p-column>
         </p-dataTable>
@@ -38,6 +42,10 @@
                 <template let-tblColabCidade="rowData" pTemplate type="body">
                     <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectCidade(tblColabCidade)" [(ngModel)]="tblColabCidade.ativo"
                         *ngIf="tblColabCidade.idcidade!=0"></p-inputSwitch>
+
+                    <div *ngIf="tblColabCidade.idcidade==0">
+                        <div>{{tblColabCidade.ativo?"ativo":"inativo"}}</div>
+                    </div>
                 </template>
             </p-column>
         </p-dataTable>
@@ -67,6 +75,10 @@
                 <template let-tblColabEstado="rowData" pTemplate type="body">
                     <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectEstado(tblColabEstado)" [(ngModel)]="tblColabEstado.ativo"
                         *ngIf="tblColabEstado.idestado!=0"></p-inputSwitch>
+
+                    <div *ngIf="tblColabEstado.idestado==0">
+                        <div>{{tblColabEstado.ativo?"ativo":"inativo"}}</div>
+                    </div>
                 </template>
             </p-column>
         </p-dataTable>
@@ -95,6 +107,10 @@
                 <template let-tblColabSituacao="rowData" pTemplate type="body">
                     <p-inputSwitch onLabel="ativo" offLabel="inativo" (click)="selectSituacao(tblColabSituacao)" [(ngModel)]="tblColabSituacao.ativo"
                         *ngIf="tblColabSituacao.idsituacao!=0"></p-inputSwitch>
+
+                    <div *ngIf="tblColabSituacao.idsituacao==0">
+                        <div>{{tblColabSituacao.ativo?"ativo":"inativo"}}</div>
+                    </div>
                 </template>
             </p-column>
         </p-dataTable>
